--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "+1 (575) 232-1642",
+	"ownerNumberr": "+1 (575) 232-1642",
+	"botnumber": "+1 (575) 232-1642",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
